# glb-lib

./: .travis.yml  CMakeLists.txt
include/: list.h
include/glb-lib/: config.h  glb_config.h  glb_json_converter.h  glb_log.h  glb_output.h  json_converter.h  list.h  options.h  output.h
include/glb-lib/opts/: cstring.h  help.h
src/: glb_output.c
src/json-converter/: glb_json_to_gsl.c  json_to_gsl.c
src/list/: list.c
src/options/: CMakeLists.txt  cstring.c  help-opt.c  options.c
tools/: json2gsl.c  json2gsl.py  repo_create.gsl  repo_create.json  whatever.gsl  whatever.json
